<resources>
    <string name="app_name">Lab2_257160_TaskManager</string>
    <string name="task_title">Task Title</string>
    <string name="due_date">Due Date</string>
    <string name="status">Status</string>
    <string name="add_task_button">Add Task</string>
    <string name="remove_task_button">Remove task</string>
    <string name="description_detail">Description_detail</string>
    <string name="back_to_list">Back to List</string>
    <string name="details">Details</string>
    <string name="icon">Icon</string>
    <string name="enter_due_date">Enter_due_date</string>
    <string name="Type_of_task">Type_of_task</string>
    <string name="enter_description">Enter_description</string>

    <string-array name="task_names">
        <item>Todo</item>
        <item>Email</item>
        <item>Phone</item>
        <item>Meeting</item>
    </string-array>

    <string-array name="description">
        <item>This Todo description</item>
        <item>This Email description</item>
        <item>This Phone description</item>
        <item>This Meeting description</item>
    </string-array>

</resources>
