<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="140dp"
        android:background="@android:color/darker_gray"
        android:scrollbars="vertical" />

    <Button
        android:id="@+id/new_task_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="190dp"
        android:layout_marginLeft="180dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/add_task_button" />

    <AutoCompleteTextView
        android:id="@+id/type_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/enter_description"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="15dp"
        android:completionThreshold="0"
        android:text="@string/Type_of_task" />

    <EditText
        android:id="@+id/enter_due_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/new_task_button"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="13dp"
        android:layout_toEndOf="@+id/type_task"
        android:layout_toRightOf="@+id/type_task"
        android:ems="10"
        android:inputType="date"
        android:text="@string/enter_due_date"
        android:autofillHints="due date" />

    <EditText
        android:id="@+id/enter_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="54dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/enter_description"
        android:autofillHints="description" />


</RelativeLayout>